# Kuber

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/kuber_backend/: Cargo.toml  kuber_backend.did
src/kuber_backend/src/: lib.rs  test.rs
src/kuber_frontend/: index.html  package.json  vite.config.js
src/kuber_frontend/src/: App.jsx  index.scss
