[package]
name = "kuber_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7"
ic-cdk = "0.6"
ic-cdk-macros = "0.6"  # or latest stable version
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

